# ion_scattering_by_SWD

./: .envrc  .gitignore  .nojekyll  Project.toml  README.md  _quarto-man.yml  _quarto.yml  environment.yml  index-preview.html  index.embed.ipynb  index.html  index.out.ipynb  index.qmd  justfile  notes-preview.html  notes.embed.ipynb  notes.html  notes.out.ipynb  notes.qmd  pyproject.toml  search.json
CurrentSheetTestParticle/: Project.toml  README.md
_tex/: index.tex
files/: overleaf.just  tex.just
notebooks/: 00_index-preview.html  00_index.embed.ipynb  00_index.out.ipynb  00_index.qmd  01_sim_analysis.jl  02_mixing_rates-preview.html  02_mixing_rates.embed.ipynb  02_mixing_rates.html  02_mixing_rates.jl  02_mixing_rates.out.ipynb  02_mixing_rates.qmd  03_pa_scatter_demo.jl  03_surrogate-preview.html  03_surrogate.embed.ipynb  03_surrogate.html  03_surrogate.out.ipynb  03_surrogate.qmd  04_normalization-preview.html  04_normalization.embed.ipynb  04_normalization.html  04_normalization.out.ipynb  04_normalization.qmd  04_normalization.quarto_ipynb  10_test_tm-preview.html  10_test_tm.embed.ipynb  10_test_tm.html  10_test_tm.out.ipynb  10_test_tm.qmd  10_test_tm.quarto_ipynb  main-preview.html  main.html  main.ipynb  main.nb  main.out.ipynb  main_idl-preview.html  main_idl.ipynb  main_idl.out.ipynb  notes.nb  sim_analysis-preview.html  sim_analysis.html  (+3 more)
presentations/: SHINE_2025-preview.html  SHINE_2025.embed.ipynb  SHINE_2025.out.ipynb  SHINE_2025.pptx  SHINE_2025.qmd  SPARTHRB-preview.html  SPARTHRB.qmd  SPARTHRB_2025-02.pptx  grpMeeting_2024-10.pptx  (+6 more)
(+35 files in other folders)
